# forge-tokenizer

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: README.md  benchmark_encode.py  benchmark_fertility.py
data/: code_sample.py.txt  multilingual_samples.json  tiny_corpus.txt
docs/: book_alignment.md  experiments.md  figures.md
examples/: 01_train_toy_bpe.py  02_encode_decode.py  03_measure_fertility.py  04_bpe_dropout.py  05_ppmi_svd_embeddings.py  06_embedding_neighbors.py  07_logit_lens_demo.py
notebooks/: 03_bpe_merge_trace.ipynb  04_token_tax_lab.ipynb  05_token_id_to_meaning.ipynb  06_chat_formatting_token_tax.ipynb  embedding_geometry.ipynb  tokenizer_playground.ipynb
src/forge_tokenizer/: __init__.py  bpe.py  cli.py  embeddings.py  logit_lens.py  metrics.py  normalizer.py  pretokenizer.py  tokenizer.py  unembedding.py  visualization.py
tests/: test_bpe.py  test_embeddings.py  test_metrics.py  test_normalizer.py  test_notebooks.py  test_pretokenizer.py  test_tokenizer_roundtrip.py  test_unembedding.py
