[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-tokenizer"
version = "0.1.0"
description = "Educational reference implementations for tokenization and embeddings."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Marco Haruni" }]
keywords = ["tokenization", "bpe", "embeddings", "language-models", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "matplotlib",
    "pytest",
    "tqdm",
    "regex",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Repository = "https://github.com/marcoharuni/forge-tokenizer"
Issues = "https://github.com/marcoharuni/forge-tokenizer/issues"

[project.scripts]
forge-tokenizer = "forge_tokenizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
